<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StudentEditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_spacing_half"
            android:layout_marginTop="@dimen/item_spacing"
            android:layout_marginRight="@dimen/item_spacing_half"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_spacing"
            app:layout_constraintEnd_toEndOf="@id/full_name_text"
            app:layout_constraintStart_toStartOf="@id/full_name_text"
            app:layout_constraintTop_toBottomOf="@id/full_name_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_spacing"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/email_text"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@id/email_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/loading_student_data"
        android:visibility="gone" />

    <TextView
        android:id="@+id/not_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_record_found"
        android:visibility="gone" />
</FrameLayout>