<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StudentActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/loading_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_spacing_half"
        android:layout_marginTop="@dimen/item_spacing"
        android:layout_marginRight="@dimen/item_spacing_half"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/item_spacing_half"
            android:padding="@dimen/item_spacing_half"
            android:text="@string/loading_student_data" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_spacing_half"
        android:layout_marginTop="@dimen/item_spacing"
        android:layout_marginRight="@dimen/item_spacing_half"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/item_spacing_half">

            <TextView
                android:id="@+id/full_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/full_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_spacing"
                android:layout_marginLeft="@dimen/item_spacing"
                app:layout_constraintBaseline_toBaselineOf="@id/full_name_label"
                app:layout_constraintStart_toEndOf="@id/full_name_label"
                tools:text="James west" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_spacing_half"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@id/full_name_label"
                app:layout_constraintTop_toBottomOf="@id/full_name_label" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_spacing"
                android:layout_marginLeft="@dimen/item_spacing"
                app:layout_constraintBaseline_toBaselineOf="@id/email_label"
                app:layout_constraintStart_toEndOf="@id/email_label"
                tools:text="James.west@gmail.com" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/not_found_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/item_spacing_half"
        android:layout_marginTop="@dimen/item_spacing"
        android:layout_marginRight="@dimen/item_spacing_half"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/item_spacing_half"
            android:padding="@dimen/item_spacing_half"
            android:text="@string/no_record_found" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>